select final models after full model fitting 2022

--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -3283,45 +3283,53 @@ for (naam in names(final_models_simpel_2022)) {
 }
 ```
 
-```{r, eval=FALSE}
+```{r}
 final_models_2022 <- list(
-  Buizerd = Buizerd_distmod_2022_hr1,
-  Ekster = Ekster_distmod_2022_hr1,
+  Blauwborst = Blauwborst_distmod_2022_hn1_simpel,
+  Boomkruiper = Boomkruiper_distmod_2022_hn1_simpel,
+  Bosrietzanger = Bosrietzanger_distmod_2022_hn1_simpel,
+  BruineKiekendief = BruineKiekendief_distmod_2022_hn1_simpel,
+  Buizerd = Buizerd_distmod_2022_hr1_simpel,
+  Ekster = Ekster_distmod_2022_hn1_simpel,
   Fazant = Fazant_distmod_2022_hr7,
-  Gaai = Gaai_distmod_2022_hn1,
-  Geelgors = Geelgors_distmod_2022_hr1,
-  GeleKwikstaart = GeleKwikstaart_distmod_2022_hr1,
+  Gaai = Gaai_distmod_2022_hn1_simpel,
+  Geelgors = Geelgors_distmod_2022_hr1_simpel,
+  GeleKwikstaart = GeleKwikstaart_distmod_2022_hr1_simpel,
   Grasmus = Grasmus_distmod_2022_hr10,
-  GrauweGors = GrauweGors_distmod_2022_hn1,
-  GroeneSpecht = GroeneSpecht_distmod_2022_hr1,
-  Groenling = Groenling_distmod_2022_hn1,
-  GroteBonteSpecht = GroteBonteSpecht_distmod_2022_hn1,
-  GroteLijster = GroteLijster_distmod_2022_hn1,
+  Graspieper = Graspieper_distmod_2022_hn1_simpel,
+  GrauweGors = GrauweGors_distmod_2022_hn1_simpel,
+  GroeneSpecht = GroeneSpecht_distmod_2022_hr1_simpel,
+  Groenling = Groenling_distmod_2022_hr1_simpel,
+  GroteBonteSpecht = GroteBonteSpecht_distmod_2022_hn1_simpel,
+  GroteLijster = GroteLijster_distmod_2022_hn1_simpel,
   Haas = Haas_distmod_2022_hn3,
-  Heggenmus = Heggenmus_distmod_2022_hn1,
-  Holenduif = Holenduif_distmod_2022_hn1,
+  Heggenmus = Heggenmus_distmod_2022_hn1_simpel,
+  Holenduif = Holenduif_distmod_2022_hn1_simpel,
   Houtduif = Houtduif_distmod_2022_hr7,
   Huismus = Huismus_distmod_2022_hn6,
-  Kauw = Kauw_distmod_2022_hn1,
-  Kievit = Kievit_distmod_2022_hr1,
-  KleineKarekiet = KleineKarekiet_distmod_2022_hr1,
+  Kauw = Kauw_distmod_2022_hn1_simpel,
+  Kievit = Kievit_distmod_2022_hr1_simpel,
+  KleineKarekiet = KleineKarekiet_distmod_2022_hr1_simpel,
   Kneu = Kneu_distmod_2022_hn6,
-  Koolmees = Koolmees_distmod_2022_hn1,
-  Kwartel = Kwartel_distmod_2022_hn1,
-  Meerkoet = Meerkoet_distmod_2022_hr1,
+  Koolmees = Koolmees_distmod_2022_hn1_simpel,
+  Kwartel = Kwartel_distmod_2022_hn1_simpel,
+  Meerkoet = Meerkoet_distmod_2022_hn1_simpel,
   Merel = Merel_distmod_2022_hn7,
-  Pimpelmees = Pimpelmees_distmod_2022_hr1,
-  Rietzanger = Rietzanger_distmod_2022_hr1,
-  Ringmus = Ringmus_distmod_2022_hn1,
-  Roodborst = Roodborst_distmod_2022_hn1,
-  Roodborsttapuit = Roodborsttapuit_distmod_2022_hr1,
-  Spreeuw = Spreeuw_distmod_2022_hn1,
+  Pimpelmees = Pimpelmees_distmod_2022_hr1_simpel,
+  Putter = Putter_distmod_2022_hn1_simpel,
+  Rietzanger = Rietzanger_distmod_2022_hr1_simpel,
+  Ringmus = Ringmus_distmod_2022_hn1_simpel,
+  Roek = Roek_distmod_2022_hn1_simpel,
+  Roodborst = Roodborst_distmod_2022_hn1_simpel,
+  Roodborsttapuit = Roodborsttapuit_distmod_2022_hn1_simpel,
+  Spotvogel = Spotvogel_distmod_2022_hn1_simpel,
+  Spreeuw = Spreeuw_distmod_2022_hn1_simpel,
   Tjiftjaf = Tjiftjaf_distmod_2022_hn2,
   Torenvalk = Torenvalk_distmod_2022_hr5,
-  TurkseTortel = TurkseTortel_distmod_2022_hr1,
+  TurkseTortel = TurkseTortel_distmod_2022_hr1_simpel,
   Veldleeuwerik = Veldleeuwerik_distmod_2022_hr7,
   Vink = Vink_distmod_2022_hn8,
-  WildeEend = WildeEend_distmod_2022_hn1,
+  WildeEend = WildeEend_distmod_2022_hn1_simpel,
   Winterkoning = Winterkoning_distmod_2022_hr8,
   WitteKwikstaart = WitteKwikstaart_distmod_2022_hn2,
   Zanglijster = Zanglijster_distmod_2022_hn2,
