--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -3439,12 +3439,13 @@ for (naam in names(final_models_2022)) {
       for (k in seq_along(unique(ds_model_2022$ddf$data$regio))) {
       reg <- sort(unique(ds_model_2022$ddf$data$regio))[k]
       
+      if (!(j == "HOL" & reg == "De Moeren")) {
       plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
          subset = regio == reg & openheid == j,
          main = paste(reg, j, sep = "- "), pl.col = alpha(cols[i], 0.5))
       add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[i],
         data = data.frame(regio = reg, openheid = j), pdf = TRUE)
-      }
+      }}
     }
     
     par(mfrow = c(1, 1))
@@ -3485,12 +3486,13 @@ for (naam in names(final_models_2022)) {
         for (k in seq_along(unique(ds_model_2022$ddf$data$regio))) {
         reg <- sort(unique(ds_model_2022$ddf$data$regio))[k]
         
+        if (!(o == "HOL" & reg == "De Moeren")) {
         plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
            subset = regio == reg & sbp == j & openheid == o,
            main = paste(reg, j, o, sep = "- "), pl.col = alpha(cols[h], 0.5))
         add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[h],
           data = data.frame(regio = reg, sbp = j, openheid = o), pdf = TRUE)
-        }
+        }}
       }
     }
     par(mfrow = c(1, 1))
