--- a/src/markdown/mas/analyse_veldleeuwerik.Rmd
+++ b/src/markdown/mas/analyse_veldleeuwerik.Rmd
@@ -2946,7 +2946,7 @@ final_models[indices_to_remove] <- NULL
 #### Binned distance sampling
 
 De detectiekans voor Blauwborst, Bosrietzanger, Graspieper, Groenling, Haas, Holenduif, Roodborsttapuit, Torenvalk, Tuinfluiter en Veldleeuwerik neemt soms weer toe na een bepaalde afstand.
-Voor deze soorten groeperen we de afstanden per 100 meter voor Kwartel en 50 meter voor de andere soorten.
+Voor deze soorten groeperen we de afstanden per 50 (6 bins), 75 (4 bins) of 100 m (3 bins).
 
 ```{r}
 spec_to_bin <- list(Blauwborst = 6,
@@ -3505,12 +3505,12 @@ for (naam in names(final_models_2022)) {
 
 #### Problematische soorten
 
-De data voor GroeneSpecht, GroteBonteSpecht passen niet voor distance sampling.
+De data voor BruineKiekendief, Roek passen niet voor distance sampling.
 Een belangrijke aanname voor distance sampling is dat de detectiekans afneemt over de afstand.
 Dat zien we niet voor deze soorten, waardoor we geen detectiecurve kunnen fitten.
 
 ```{r}
-spec_to_remove <- c("GroeneSpecht", "GroteBonteSpecht")
+spec_to_remove <- c("BruineKiekendief", "Roek")
 indices_to_remove <- which(names(final_models_2022) %in% spec_to_remove)
 
 # Remove
@@ -3520,19 +3520,30 @@ final_models_2022[indices_to_remove] <- NULL
 #### Binned distance sampling
 
 De detectiekans voor Blauwborst, Bosrietzanger, Graspieper, Groenling, Haas, Holenduif, Roodborsttapuit, Torenvalk, Tuinfluiter en Veldleeuwerik neemt soms weer toe na een bepaalde afstand.
-Voor deze soorten groeperen we de afstanden per 100 meter voor Kwartel en 50 meter voor de andere soorten.
+Voor deze soorten groeperen we de afstanden per 50 (6 bins), 75 (4 bins) of 100 m (3 bins).
 
 ```{r}
-spec_to_bin <- list(Blauwborst = 6,
-                    Bosrietzanger = 3,
-                    Graspieper = 4,
-                    Groenling = 3,
+spec_to_bin <- list(Blauwborst = 3,
+                    GeleKwikstaart = 4,
+                    Graspieper = 3,
+                    GrauweGors = 3,
+                    GroteBonteSpecht = 4,
+                    GroteLijster = 3,
                     Haas = 4,
-                    Holenduif = 3,
-                    Roodborsttapuit = 4,
-                    Torenvalk = 6,
-                    Tuinfluiter = 3,
-                    Veldleeuwerik = 6)
+                    Holenduif = 4,
+                    Kauw = 3,
+                    Kievit = 4,
+                    KleineKarekiet = 3,
+                    Kwartel = 6,
+                    Rietzanger = 4,
+                    Ringmus = 3,
+                    Veldleeuwerik = 6,
+                    WildeEend = 4,
+                    WitteKwikstaart = 6,
+                    Zanglijster = 4,
+                    ZwarteKraai = 6,
+                    ZwarteRoodstaart = 4,
+                    Zwartkop = 6)
 
 final_models_2022_update <- final_models_2022
 final_models_2022_binned <- list()
@@ -3597,5 +3608,166 @@ names(final_models_2022_binned) <- final_models_2022_binned_names
 ```
 
 We controleren nieuwe fit.
+
+```{r}
+for (naam in names(final_models_2022_binned)) {
+  ds_model_2022 <- final_models_2022_binned[[naam]]
+  f <- ds_model_2022$ddf$ds$aux$ddfobj$scale$formula
+  
+  titel <- paste(unlist(strsplit(naam, "(?<=[a-z])(?=[A-Z])", 
+                                 perl = TRUE)), collapse = " ")
+  par(mfrow = c(1, 1))
+  plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+       main = paste(titel, f, sep = " - "))
+  
+  if (f == "~regio") {
+    par(mfrow = c(1, 2))
+      
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = regio == "De Moeren",
+         main = "De Moeren", pl.col = alpha("blue", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "blue",
+      data = data.frame(regio = "De Moeren"), pdf = TRUE)
+    
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = regio == "Oostelijke leemstreek",
+         main = "Oostelijke leemstreek", pl.col = alpha("darkgreen", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "darkgreen",
+      data = data.frame(regio = "Oostelijke leemstreek"), pdf = TRUE)
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f == "~sbp") {
+    par(mfrow = c(1, 2))
+      
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = sbp == "binnen",
+         main = "binnen", pl.col = alpha("blue", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "blue",
+      data = data.frame(sbp = "binnen"), pdf = TRUE)
+    
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = sbp == "buiten",
+         main = "buiten", pl.col = alpha("darkgreen", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "darkgreen",
+      data = data.frame(sbp = "buiten"), pdf = TRUE)
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f == "~openheid") {
+    par(mfrow = c(1, 2))
+      
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = openheid == "OL",
+         main = "OL", pl.col = alpha("blue", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "blue",
+      data = data.frame(openheid = "OL"), pdf = TRUE)
+    
+    plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = openheid == "HOL",
+         main = "HOL", pl.col = alpha("darkgreen", 0.5))
+    add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = "darkgreen",
+      data = data.frame(openheid = "HOL"), pdf = TRUE)
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f %in% c("~regio + sbp", "~regio * sbp")) {
+    par(mfrow = c(1, 2))
+    
+    cols <- c("blue", "darkgreen")
+    
+    
+    for (i in seq_along(unique(ds_model_2022$ddf$data$sbp))) {
+      j <- sort(unique(ds_model_2022$ddf$data$sbp))[i]
+      
+      for (k in seq_along(unique(ds_model_2022$ddf$data$regio))) {
+      reg <- sort(unique(ds_model_2022$ddf$data$regio))[k]
+      
+      plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = regio == reg & sbp == j,
+         main = paste(reg, j, sep = "- "), pl.col = alpha(cols[i], 0.5))
+      add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[i],
+        data = data.frame(regio = reg, sbp = j), pdf = TRUE)
+      }
+    }
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f %in% c("~regio + openheid", "~regio * openheid")) {
+    par(mfrow = c(1, 2))
+    
+    cols <- c("blue", "darkgreen")
+    
+    
+    for (i in seq_along(unique(ds_model_2022$ddf$data$openheid))) {
+      j <- sort(unique(ds_model_2022$ddf$data$openheid))[i]
+      
+      for (k in seq_along(unique(ds_model_2022$ddf$data$regio))) {
+      reg <- sort(unique(ds_model_2022$ddf$data$regio))[k]
+      
+      if (!(j == "HOL" & reg == "De Moeren")) {
+      plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = regio == reg & openheid == j,
+         main = paste(reg, j, sep = "- "), pl.col = alpha(cols[i], 0.5))
+      add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[i],
+        data = data.frame(regio = reg, openheid = j), pdf = TRUE)
+      }}
+    }
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f %in% c("~sbp + openheid", "~sbp * openheid")) {
+    par(mfrow = c(1, 2))
+    
+    cols <- c("blue", "darkgreen")
+    
+    
+    for (i in seq_along(unique(ds_model_2022$ddf$data$openheid))) {
+      j <- sort(unique(ds_model_2022$ddf$data$openheid))[i]
+      
+      for (k in seq_along(unique(ds_model_2022$ddf$data$sbp))) {
+      reg <- sort(unique(ds_model_2022$ddf$data$sbp))[k]
+      
+      plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+         subset = sbp == reg & openheid == j,
+         main = paste(reg, j, sep = "- "), pl.col = alpha(cols[i], 0.5))
+      add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[i],
+        data = data.frame(sbp = reg, openheid = j), pdf = TRUE)
+      }
+    }
+    
+    par(mfrow = c(1, 1))
+  }
+  if (f == "~regio + sbp + openheid") {
+    par(mfrow = c(1, 2))
+    
+    cols <- c("blue", "darkgreen")
+    
+    for (h in seq_along(unique(ds_model_2022$ddf$data$openheid))) {
+      o <- sort(unique(ds_model_2022$ddf$data$openheid))[h]
+      
+      for (i in seq_along(unique(ds_model_2022$ddf$data$sbp))) {
+        j <- sort(unique(ds_model_2022$ddf$data$sbp))[i]
+        
+        for (k in seq_along(unique(ds_model_2022$ddf$data$regio))) {
+        reg <- sort(unique(ds_model_2022$ddf$data$regio))[k]
+        
+        if (!(o == "HOL" & reg == "De Moeren")) {
+        plot(ds_model_2022, pdf = TRUE, showpoints = FALSE,
+           subset = regio == reg & sbp == j & openheid == o,
+           main = paste(reg, j, o, sep = "- "), pl.col = alpha(cols[h], 0.5))
+        add.df.covar.line(ds_model_2022, lwd = 3, lty = 1, col = cols[h],
+          data = data.frame(regio = reg, sbp = j, openheid = o), pdf = TRUE)
+        }}
+      }
+    }
+    par(mfrow = c(1, 1))
+  }
+  
+  print(plot_detection_curve(ds_model_2022) +
+    labs(title = titel))
+}
+```
+
 
 # Referenties
